--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <script src="script.js"></script>
     <script type="text/javascript">
-            var author = 'Aku';
+            var author = 'Caesar';
             var today = new Date();var date = today.getDate()+'/'+(today.getMonth()+1)+'/'+today.getFullYear()+'.';var dateTime = date;
             var swals = Swal
             async function mulai(){
@@ -58,8 +58,8 @@
                         title: `Sebelumnya, ${nama} sayang gak sama ${author} :(`,
                         showDenyButton: true,
                         showCancelButton: false,
-                        confirmButtonText: 'Sayang',
-                        denyButtonText: `Gak sayang`,
+                        confirmButtonText: 'Sayang❤️',
+                        denyButtonText: `Gak sayang😡',
                         allowOutsideClick: false,
                     }).then((result) => {
                         if (result.isConfirmed) {
